--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/router": "~9.1.0",
     "hammerjs": "^2.0.8",
     "material-icons": "^0.3.1",
-    "moment": "^2.25.1",
+    "moment": "^2.18.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -45,6 +45,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "moment-locales-webpack-plugin": "^1.2.0",
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
