--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "hammerjs": "^2.0.8",
     "material-icons": "^0.3.1",
     "moment": "^2.18.1",
+    "ngx-skeleton-loader": "^1.2.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
